Compiler/tests/bad/Structs/01_structs.rs
fn main(){
  let p:Point2D = Point2D{x:12, y:14};

  return;
}